This file summarizes the major and interesting changes for each release.
For a detailed list of changes, please see ChangeLog.

0.14 (UNRELEASED):

 * Enhancements:
   - Updated translations
   - Slightly improved appearance of main icon

 * Bug fixes:

0.13 (2012-02-14):

 * Enhancements:
   - Added random password generation
   - Lock now uses the main window to prevent a window from showing up
     on another workspace when the timeout occurs

 * Bug fixes:

0.12 (2012-02-04):

 * Enhancements:
   - Updated translations
   - Added a TODO item
   - Migrated to PyGObject and GSettings, thanks to Francesco Marella

 * Bug fixes (related to PyGObject and GSettings migration):
   - Get rid of traceback when quitting without a selection
   - Restore click on URL functionality
   - Fix initial size of notes field
   - Fix about dialog layout
   - Updated requirements in README file
   - Refactor and simplify GSettings code to use bindings
   - Add database path description to GSettings schema file
   - Add GConf to GSettings migration file
   - Fix crasher when sometimes adding a new entry

0.11 (2011-12-11):

 * Enhancements:
   - A help file is now available with basic usage instructions.
   - Re-enable launchpad integration
   - Added a README file

 * Bug fixes:
   - Removed debian packaging files from upstream project

0.10 (2011-10-02):

 * Enhancements:
   - Numerous improvements, thanks to Francesco Marella:
     - Figaro xml import script
     - Added option to automatically save changes
     - Added context menu to left pane
     - Added Clone command to clone an entry 

 * Bug fixes:
   - Save menu option and toolbar icon are now inactive when there is
     nothing to save.
   - Don't indicate save is required when a new entry is cancelled

0.9 (2011-09-15):

 * Enhancements:

 * Bug fixes:
   - Don't crash if a new entry is added and no entry is currently selected
     when attempting to update the right pane.

0.8 (2011-08-28):

 * Enhancements: