@@ -6,6 +6,7 @@ For a detailed list of changes, please see ChangeLog.
  * Enhancements:
    - Updated translations
    - Slightly improved appearance of main icon
+   - Implemented search
 
  * Bug fixes:
 
